--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -8,5 +8,8 @@
       "run": "npm start",
       "appDevserverUrl": "http://localhost:3000"
     }
+  },
+  "platform" : {
+    "apiRuntime": "node:18"
   }
 }
