--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -2,9 +2,11 @@
   "$schema": "https://aka.ms/azure/static-web-apps-cli/schema",
   "configurations": {
     "my-first-static-web-app": {
-      "appLocation": ".",
+      "appLocation": "app",
+      "apiLocation": "api",
       "outputLocation": "build",
       "appBuildCommand": "npm run build",
+      "apiBuildCommand": "npm run build",
       "run": "npm start",
       "appDevserverUrl": "http://localhost:3000"
     }
